[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menues/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menues/Home Screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menues/Lobby.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
SERVER_PORT = 4445
SERVER_IP = "192.168.0.1"
MAX_PLAYERS = 4

[node name="Home" parent="." index="0" instance=ExtResource( 2 )]

[node name="Lobby" parent="." index="1" instance=ExtResource( 3 )]

visible = false

[connection signal="createServer" from="Home" to="." method="_on_Home_createServer"]

[connection signal="joinServer" from="Home" to="." method="_on_Home_joinServer"]

[connection signal="back" from="Lobby" to="." method="_on_Lobby_back"]


